# sbm-cli

./: .gitignore  README.md  pyproject.toml
example_preds/claude-swe-agent/: all_preds_dev.json  all_preds_test.json
example_preds/claude-swe-agent-m/: all_preds_dev.json  all_preds_test.json
example_preds/gpt-4o-swe-agent/: all_preds_dev.json  all_preds_test.json
example_preds/gpt-4o-swe-agent-m/: all_preds_dev.json  all_preds_test.json
sbm_cli/: __init__.py  config.py  delete_run.py  get_report.py  list_runs.py  submit.py  utils.py
