[project]
name = "sbm-cli"
version = "0.1.0"
description = "Submit predictions to the SWE-bench M API and manage your runs"
authors = [
    { name = "Anonymous", email = "anonymous@email.com" }
]
dependencies = [
    "typer>=0.9.0",
    "requests",
    "rich",
]
requires-python = ">=3.10"

[project.scripts]
sbm-cli = "sbm_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sbm_cli"]

[tool.ruff]
line-length = 88
src = ["sbm_cli"]
